test/semant/negative_controls/buggy_progs/type-mismatch.con
concept test
purpose "something"
state
  x : Int
actions
  a() 
  x := "type mismatch"
principle
